# filteredit

./: TODO  filterwidget.cabal
src/Editor/: Anchors.hs  Config.hs  Filter.hs  Main.hs
